--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,3 +4,20 @@
 header {
   display : none
 }
+
+body {
+    margin: auto;
+    width: 50%;
+    border: 5px solid green;
+    padding: 10px;
+    background-color: #1d2323;
+    text-color: 
+}
+
+h3 {
+    color: #b5e853;
+}
+
+h1 {
+    color: #d20000;
+}
